# fastapi-lite

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
src/fastapi_lite/: __init__.py  cache.py  log.py
src/fastapi_lite/aws/: __init__.py  auth.py  botocore.py  router.py  session.py
tests/: test_aws.py  test_cache.py  test_log.py
